--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -8219,7 +8219,7 @@ h1, h2, h3, h4, h5,
 #sidebar {
   min-width: 300px;
   max-width: 300px;
-  background: #1d1919;
+  background: #FF9E00;
   color: #fff;
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
@@ -8247,10 +8247,10 @@ h1, h2, h3, h4, h5,
       color: rgba(255, 255, 255, 0.8);
       border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
       #sidebar ul li a:hover {
-        color: #f8b739; }
-    #sidebar ul li.active > a {
+        color: #FFFFFF; }
+    /* #sidebar ul li.active > a {
       background: transparent;
-      color: #f8b739; }
+      color: #FFFFFF; } */
   @media (max-width: 991.98px) {
     #sidebar {
       margin-left: -300px; }
